# nightclaw

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SETUP-FOR-AI.md  SOUL.template.md  THIRD_PARTY_NOTICES.md  UPSTREAM.md  index.html  nightclaw.config.example.json  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.claude/: settings.local.json
docs/: avatar-creation-guide.md  model-pipeline.md  voice-cloning-guide.md  voice-providers.md
docs/superpowers/plans/: 2026-04-27-nightclaw-rebuild.md
docs/superpowers/specs/: 2026-04-27-nightclaw-rebuild-design.md
models/: README.md  beatrice_expressions.vrm  beatrice_fixed.vrm  ram kid.vrm  ram.vrm
public/models/: beatrice.vrm
public/motions/: walk.vrma
scripts/: akasha-write.py  download-fish-s2.py
src/: App.css  App.tsx  app.ts  config.ts  index.ts  main.ts  main.tsx  test-setup.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: animations.rs  audio.rs  config.rs  hittest.rs  lib.rs  main.rs  memory.rs  models.rs  openclaw.rs  screen.rs  stats.rs  voice.rs  window.rs
src/avatar/: avatar.ts  environment.ts
src/companion/: dream-journal.ts  screen-awareness.ts  vision-reaction.ts
src/components/: ChatInputBar.css  ChatInputBar.tsx  ChatWindow.css  ChatWindow.tsx  ErrorBoundary.tsx  ModelViewer.tsx  Settings.css  Settings.tsx  SetupWizard.tsx  SpeechBubble.tsx  VRMViewer.tsx
src/components/settings/: BehaviorSettings.tsx  OpenClawSettings.tsx  PrivacySettings.tsx  Toggle.tsx
src/discord-voice/: presence.ts
src/hooks/: useCharacterInteraction.ts  useChatSend.ts  useDrag.ts  useEmotion.ts  useFTUE.ts  useHitTest.ts  useMotion.ts  usePetTick.ts  useScreenWatch.ts  useTauriListeners.ts  useThreeScene.ts  useTouchReaction.ts  useVRM.ts
src/lib/: animationManager.ts  commentEngine.ts  constants.ts  contextComposer.ts  conversationSignals.ts  customAnimationManager.ts  dragSway.ts  emotionParser.ts  emotionStateMachine.ts  firstMemoryRecall.ts  firstRunBridge.ts  handReach.ts  headpatDetector.ts  imaginationLand.ts  llmService.ts  logger.ts  memoryManager.ts  modelManager.ts  modelPrep.ts  mouseTracking.ts  openclaw.ts  particleSystem.ts  personalityIslands.ts  petBehavior.ts  platformPhysics.ts  privacyManager.ts  roomEnvironment.ts  senseOfSelf.ts  soulIdentity.ts  springBoneGravity.ts  triggerParser.ts  voiceProviders.ts
src/lib/__tests__/: commentEngine.test.ts  contextComposer.test.ts  conversationSignals.test.ts  emotionParser.test.ts  emotionStateMachine.test.ts  llmService.test.ts  memoryManager.test.ts  modelPrep.test.ts  petBehavior.test.ts  platformPhysics.test.ts  privacyManager.test.ts  roomEnvironment.test.ts  soulIdentity.test.ts  voiceProviders.test.ts
src/lib/i18n/: de.ts  en.ts  es.ts  (+9 more)
src/voice/: pipeline.ts
voices/: README.md
