[package]
name = "nightclaw"
version = "0.1.0"
description = "NightClaw — GOD REI: PRAISE THE SUN"
authors = ["Rei <rei@nightclaw.dev>", "Willie <fps_samurai>"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["system-tray"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
